--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,64 @@
+appnope==0.1.3
+asttokens==2.0.8
 attrs==21.4.0
+backcall==0.2.0
+branca==0.5.0
 certifi==2022.6.15
 charset-normalizer==2.1.0
 click==8.1.3
 click-plugins==1.1.1
 cligj==0.7.2
 cycler==0.11.0
+debugpy==1.6.3
+decorator==5.1.1
+entrypoints==0.4
+executing==0.10.0
 Fiona==1.8.21
+folium==0.12.1.post1
 fonttools==4.34.4
 geopandas==0.11.0
 idna==3.3
+ipykernel==6.15.1
+ipython==8.4.0
+jedi==0.18.1
+Jinja2==3.1.2
+joblib==1.1.0
+jupyter-client==7.3.4
+jupyter-core==4.11.1
 kiwisolver==1.4.4
+mapclassify==2.4.3
+MarkupSafe==2.1.1
 matplotlib==3.5.2
+matplotlib-inline==0.1.6
 munch==2.5.0
+nest-asyncio==1.5.5
+networkx==2.8.5
 numpy==1.23.1
 packaging==21.3
 pandas==1.4.3
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==9.2.0
+prompt-toolkit==3.0.30
+psutil==5.9.1
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pyairtable==1.2.0
+Pygments==2.13.0
 pyparsing==3.0.9
 pyproj==3.3.1
 python-dateutil==2.8.2
 pytz==2022.1
+pyzmq==23.2.1
 requests==2.28.1
+scikit-learn==1.1.2
+scipy==1.9.0
 Shapely==1.8.2
 six==1.16.0
+stack-data==0.4.0
+threadpoolctl==3.1.0
+tornado==6.2
+traitlets==5.3.0
 urllib3==1.26.11
+wcwidth==0.2.5
